--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,19 +94,19 @@ macro(taskloaf_tests name files)
         ${CMAKE_THREAD_LIBS_INIT})
 endmacro()
 
-if(BUILD_TESTS)
-    taskloaf_tests(run_tests
-        "tests/test_main.cpp;tests/test_future.cpp;tests/test_fnc.cpp;tests/test_data.cpp;tests/test_worker.cpp;tests/test_id.cpp;tests/test_ring.cpp;tests/test_comm.cpp;tests/test_ref_counting.cpp"
-    )
-
-    enable_testing()
-    add_test(main-tests run_tests)
-
-    if (MPI_CXX_FOUND)
-        taskloaf_tests(mpi_tests "tests/test_mpi.cpp")
-        add_test(mpi-tests mpirun -n 2 mpi_tests)
-    endif()
-endif(BUILD_TESTS)
+#if(BUILD_TESTS)
+#    taskloaf_tests(run_tests
+#        "tests/test_main.cpp;tests/test_future.cpp;tests/test_fnc.cpp;tests/test_data.cpp;tests/test_worker.cpp;tests/test_id.cpp;tests/test_ring.cpp;tests/test_comm.cpp;tests/test_ref_counting.cpp"
+#    )
+#
+#    enable_testing()
+#    add_test(main-tests run_tests)
+#
+#    if (MPI_CXX_FOUND)
+#        taskloaf_tests(mpi_tests "tests/test_mpi.cpp")
+#        add_test(mpi-tests mpirun -n 2 mpi_tests)
+#    endif()
+#endif(BUILD_TESTS)
 
 ################################################################################
 #                              taskloaf python bindings
@@ -149,21 +149,21 @@ macro(taskloaf_example name filename)
 endmacro()
 
 if (BUILD_EXAMPLES)
-    taskloaf_example(totient examples/totient.cpp)
-    taskloaf_example(dot_product examples/dot_product.cpp)
-    taskloaf_example(diffusion examples/diffusion.cpp)
-    taskloaf_example(readme examples/readme.cpp)
-
-    find_package(BLAS)
-    find_package(LAPACK)
-    if (BLAS_FOUND AND LAPACK_FOUND)
-        taskloaf_example(cholesky examples/cholesky.cpp)
-        target_link_libraries(cholesky 
-            ${BLAS_LIBRARIES}
-            ${LAPACK_LIBRARIES}
-            ${CMAKE_THREAD_LIBS_INIT}
-            )
-    endif()
+    #    taskloaf_example(totient examples/totient.cpp)
+    #    taskloaf_example(dot_product examples/dot_product.cpp)
+    #    taskloaf_example(diffusion examples/diffusion.cpp)
+    #    taskloaf_example(readme examples/readme.cpp)
+    #
+    #    find_package(BLAS)
+    #    find_package(LAPACK)
+    #    if (BLAS_FOUND AND LAPACK_FOUND)
+    #        taskloaf_example(cholesky examples/cholesky.cpp)
+    #        target_link_libraries(cholesky 
+    #            ${BLAS_LIBRARIES}
+    #            ${LAPACK_LIBRARIES}
+    #            ${CMAKE_THREAD_LIBS_INIT}
+    #            )
+    #    endif()
 
     if (MPI_CXX_FOUND)
         taskloaf_example(fibmpi examples/fibmpi.cpp)
